--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
-sudo: false
 language: ruby
-rvm:
-  - 2.5.0
-before_install: gem install bundler -v 1.16.1
+sudo: false
+bundler: true
+ script: bundle exec rake
+ rvm:
+  - 2.3
+  - 2.4
+  - ruby-head
+ matrix:
+  allow_failures:
+    - rvm: ruby-head
+  fast_finish: true
