--- a/test/service/configurations-example.yml
+++ b/test/service/configurations-example.yml
@@ -1,12 +1,14 @@
 # Copy this file to configurations.yml and edit the credentials to match your IAM teast accoiunt and bucket
 
 s3:
+  service: S3
   access_key_id:
   secret_access_key:
   region:
   bucket:
 
 gcs:
+  service: GCS
   project:
   keyfile:
   bucket:
