--- a/test/service/configurations-example.yml
+++ b/test/service/configurations-example.yml
@@ -1,5 +1,4 @@
-# Copy this file to configurations.yml and edit the credentials to match your IAM teast accoiunt and bucket
-
+# Copy this file to configurations.yml and edit the credentials to match your IAM test account and bucket
 s3:
   service: S3
   access_key_id:
@@ -9,8 +8,7 @@ s3:
 
 gcs:
   service: GCS
-  project:
-  keyfile: { # もともとはkeyfile:だけだったけど、DHHがその詳細を追記
+  keyfile: {
     type: "service_account",
     project_id: "",
     private_key_id: "",
@@ -22,4 +20,5 @@ gcs:
     auth_provider_x509_cert_url: "https://www.googleapis.com/oauth2/v1/certs",
     client_x509_cert_url: ""
   }
+  project:
   bucket:
